[gd_scene load_steps=7 format=3 uid="uid://b1cj32ehpe4ue"]

[ext_resource type="Script" path="res://characters/npc/dev_dummy/dev_dummy.gd" id="1_7yrjl"]
[ext_resource type="Texture2D" uid="uid://by0lqbv6cnya7" path="res://_dev/art/dev_enemy.png" id="2_hjvni"]
[ext_resource type="AudioStream" uid="uid://dt424b3ls1plt" path="res://_dev/audio/dev_gunshot.wav" id="3_onxl5"]
[ext_resource type="PackedScene" uid="uid://cjvu6egrx3dx1" path="res://Components/weapon_component.tscn" id="4_uo506"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7l4c1"]
size = Vector2(8, 14)

[sub_resource type="CircleShape2D" id="CircleShape2D_ldw3c"]
radius = 157.0

[node name="DevDummy" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 7
script = ExtResource("1_7yrjl")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_7l4c1")

[node name="CharacterSprite" type="Sprite2D" parent="."]
texture = ExtResource("2_hjvni")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_onxl5")
max_distance = 1000.0

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_ldw3c")

[node name="WeaponSlot" parent="." instance=ExtResource("4_uo506")]

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
